spruced-up-newsies

--- a/newsies/index.html
+++ b/newsies/index.html
@@ -11,21 +11,23 @@
 </head>
 <body>
     <div id="bottomLayer">
-        <div id="firstLine">******** SPECIAL MEMORIAL EDITION ********</div>
-        <h1 id="secondLine">The  National  News</h1>
-        <div id="volDiv"><b><pre> XIV - NO. 4230                WASHINGTON,SATURDAY,APRIL 14 1866</b>              PRICE TEN CENTS</pre></div>
+        <div id="firstLine"></br>******** SPECIAL MEMORIAL EDITION ********</div>
+        <div id="secondLine"><h1>  The National  News  </h1></div>
+        <div id="volDiv"><b><pre>XIV - NO. 47-47                     WASHINGTON,SATURDAY,APRIL 14 1866</b>                  PRICE TEN CENTS</pre></div>
         <div id= "headLine">LINCOLN SHOT</div>
         <div id= "artLine"><pre></pre></div>
         <h3 id= "hopelessLine">CONDITION CONSIDERED HOPELESS</h3>
         <div id= "artLine"><pre></pre></div>
         <h5 id= "lifeLine">Will Not Live Through The Night Doctors Declare</h5>
-        <div id= "lincolnEdit"><img src="lincoln-shot.png"/></div>
-        <span id= "parContent"><pre> To Our Readers:
+        <div id= "lincolnEdit"><img id="lincolnPic" src="lincoln-shot.png"/></div>
+        <section id= "sectionOne">
             
-                The staff of <i>The National News</i> is proud to present a SPECIAL MEMORIAL EDITION: A PRESIDENT REMEMBERED. Published on the occasion of the first anniversary of Abraham Lincoln's assassination, it is devoted entirely to the story of his tragically brief life.</br> 
-                As you can see, we begin with that dreadfulday and its aftermath. To accurately recreate the atmosphere of disbelief, shock, fear, and anger that engulfed our country, we reproduce the headlines and articles we ran at the time.</br> Faithfully recalling Lincoln's life presented a different challenge. Our staff writers traveled thousand of miles and spent countless hours interviewing those who knew him best. they have crafted a compelling story of his boyhood, youth, family life, emergence onto the national political scene, and years as leader of our nation.</br> A group of equally dedicated artists contributed visually in styles that range from simple but evocative pencil sketches to the result of the marvelous modern invention, photography.</br> You have in your hands the fruits of this labor of love. Throughout the year-long process we have tried to heed Abraham Lincoln's wise words of warning:</br><b><i>"Biographics, as generally writtenare not only misleading, but false. the author makes a wonderful hero of his subject. He magnifies his perceptions, if he has any, and suppresses his imperfections. History is not history unless it is the truth."</i></b></br> Our president's life was taken at a time of new beginnings for him and for us. It was a time of renewed promise for the nation he had held together with steadfast determination, transcendent vision, and infinite compassion. After four horrific years of civil war it was time for all Americans to rejoice: but the celebration was cut short by an assassin's bullet.</br> As so often is the case in life and letters, the poets have the last word. And so we include Walt Whitman's "O Captain! My Captain!" as a fitting final tribute.</br> Working on this SPECIAL MEMORIAL EDITION allowed us to temper our grief with appreciation. We hope it helps you to do the same.</pre></span>
-
-
+            <div id= "parContent">
+                    <h6><font size="4"><i>To Our Readers:</i></font></h6>
+                <p>The staff of <i>The National News</i> is proud to present a SPECIAL MEMORIAL EDITION: A PRESIDENT REMEMBERED. Published on the occasion of the first anniversary of Abraham Lincoln's assassination, it is devoted entirely to the story of his tragically brief life. As you can see, we begin with that dreadfulday and its aftermath. To accurately recreate the atmosphere of disbelief, shock, fear, and anger that engulfed our country, we reproduce the headlines and articles we ran at the time. Faithfully recalling Lincoln's life presented a different challenge. Our staff writers traveled thousand of miles and spent countless hours interviewing those who knew him best. they have crafted a compelling story of his boyhood, youth, family life, emergence onto</p></div>
+            <div id= "parContentTwo"><p>the national political scene, and years as leader of our nation. A group of equally dedicated artists contributed visually in styles that range from simple but evocative pencil sketches to the result of the marvelous modern invention, photography.</br> You have in your hands the fruits of this labor of love. Throughout the year-long process we have tried to heed Abraham Lincoln's wise words of warning: <b><i>"Biographics, as generally writtenare not only misleading, but false. the author makes a wonderful hero of his subject. He magnifies his perceptions, if he has any, and suppresses his imperfections. History is not history unless it is the truth."</i></b></p></div>
+            <div id= "parContentThree"><p>Our president's life was taken at a time of new beginnings for him and for us. It was a time of renewed promise for the nation he had held together with steadfast determination, transcendent vision, and infinite compassion. After four horrific years of civil war it was time for all Americans to rejoice: but the celebration was cut short by an assassin's bullet. As so often is the case in life and letters, the poets have the last word. And so we include Walt Whitman's "O Captain! My Captain!" as a fitting final tribute. Working on this SPECIAL MEMORIAL EDITION allowed us to temper our grief with appreciation. We hope it helps you to do the same.</p></div>
+        </section>
     </div> 
 </body>
 </html>
