--- a/newsies/index.html
+++ b/newsies/index.html
@@ -1,3 +1,5 @@
+<!-- This looks great! Great work, and the code looks great too. Great indetations and oraganization -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
