CSS Flag update-ROUGH

--- a/CSS Flags/index.html
+++ b/CSS Flags/index.html
@@ -20,10 +20,15 @@
     </div>
     <div class="flag">
         <div class="madagascarBoxA" id="whiteA"></div>
-        <div id="madRightCol">     
-            <div class="madagascarBoxB" id="redA"></div>
-            <div class="madagascarBoxB" id="greenA"></div>
-        </div>
+            <div id="madRightCol">     
+                <div class="madagascarBoxB" id="redA"></div>
+                <div class="madagascarBoxB" id="greenA"></div>
+            </div>
+    </div>
+    <div class="switzFlag">
+        <div class="plusSign" id="verticalRec"></div>
+        <div class="plusSign" id="horizontalRec"></div>
+
     </div>
 </body>
 </html>
