CSS Flag update ROUGH

--- a/CSS Flags/index.html
+++ b/CSS Flags/index.html
@@ -28,7 +28,10 @@
     <div class="switzFlag">
         <div class="plusSign" id="verticalRec"></div>
         <div class="plusSign" id="horizontalRec"></div>
-
+    </div>
+    <div class="swedeFlag">
+        <div class="swedeCross" id="vertLine"></div>
+        <div class="swedeCross" id="horizLine"></div>
     </div>
 </body>
 </html>
