CSS Flag update

--- a/CSS Flags/index.html
+++ b/CSS Flags/index.html
@@ -33,5 +33,10 @@
         <div class="swedeCross" id="vertLine"></div>
         <div class="swedeCross" id="horizLine"></div>
     </div>
+    <div class="flag">
+        <div class="germanBox" id="redB"></div>
+        <div class="germanBox" id="blueB"></div>
+        <div class="germanBox" id="greenB"></div>
+    </div>
 </body>
 </html>
