HTML Calculator FINAL

--- a/HTML Calculator/index.html
+++ b/HTML Calculator/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
     <input id="display"/>
     <div class="calculate" id="sum">
         <form name="addName">
-            <input id="addNumOne" type="text"/>
-            <input id="addNumTwo" type="text"/>
+            <input class="addRow" id="addNumOne" type="text"/>
+            <input class="addRow" id="addNumTwo" type="text"/>
             <button>+</button>
         </form>
     </div>
     <div class="calculate" id="product">
         <form name="multiName">
-            <input id="multiNumOne" type="text"/>
-            <input id="multiNumTwo" type="text"/>
+            <input class="multiRow" id="multiNumOne" type="text"/>
+            <input class="multiRow" id="multiNumTwo" type="text"/>
             <button>x</button>
         </form>
     </div>
     <div class="calculate" id="quotient">
         <form name="diviName">
-            <input id="diviNumOne" type="text"/>
-            <input id="diviNumTwo" type="text"/>
+            <input class="diviRow" id="diviNumOne" type="text"/>
+            <input class="diviRow" id="diviNumTwo" type="text"/>
             <button>/</button>
         </form>
     </div>
