CSS Flag tiny update still RoUgH

--- a/CSS Flags/index.html
+++ b/CSS Flags/index.html
@@ -35,7 +35,9 @@
     </div>
     <div class="flag">
         <div class="germanBox" id="redB"></div>
+        <div id="whiteStripeUp"></div>
         <div class="germanBox" id="blueB"></div>
+        <div id="whiteStripeDown"></div>
         <div class="germanBox" id="greenB"></div>
     </div>
 </body>
