--- a/Mario-Pest-Control/index.html
+++ b/Mario-Pest-Control/index.html
@@ -8,14 +8,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header id="dkHeader">
-    <img id="dkImg"src="Donkey-Kong-Country.jpeg"/>
+    <button id="start">START</button>
 </header>
 <body>
     <div class="dkBlock">
-        <div>
-            <img id="kritter" src="Kritter-DnkyKng.png"/>
-            <input class="dkInput" id="kritterInput" type="text"/>
-        
+        <div class="characterDiv">
+            <img class="dkImg" src="Kritter-DnkyKng.png"/>
+            <div class="divChild">
+                <h1>Kritter</h1>
+                <input class="dkInput" id="kritterInput" type="text"/>        
+            </div>
+        </div>
+        <div class="characterDiv">
+            <img class="dkImg" src="zinger-DK.png"/>
+            <div class="divChild">
+                <h1>Zinger</h1>
+                <input class="dkInput" id="zingerInput" type="text"/>
+            </div>
+        </div>
+        <div class="characterDiv">
+            <img class="dkImg" src="Mini-Necky-Dk.png"/>
+            <div class="divChild">
+                <h1>Mini-Necky</h1>
+            <input class="dkInput" id="gnawtyInput" type="text"/>
+            </div>
+        </div>
+        <div class="characterDiv">
+            <img class="dkImg" src="Gnawty-Dk.png"/>
+            <div class="divChild">
+                <h1>Gnawty</h1>
+            <input class="dkInput" id="" type="text"/>
+            </div>
         </div>
     </div>
 </body>
