Mario Pest Control Final

--- a/Mario-Pest-Control/index.html
+++ b/Mario-Pest-Control/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <header id="dkHeader">
-    <div class="dkTitle" id="donkeyTitle">Donkey Kong's</div>
+    <div class="dkTitle" id="donkeyTitle">Donkey Kong</div>
     <div class="dkTitle" id="pestTitle">Pest Control</div>
     <button id="start">START</button>
 </header>
@@ -65,14 +65,14 @@
             </div> 
         </div>  
     </div>
-<div id="dkFooter">
-    <p>This is a footer</p>    
-</div> 
+<footer id="dkFooter">
+    <p id="jk"><pre id="jk">Contact:
+ dksmash@nintendo.com          247 Luigi Lane Auburn, CA.95603</pre></p>
 </body>
 <script src="app.js"></script>
 </html>
 
-<!-- Mario's email address
-Mario's company website url
-Mario's physical address
-A large title at the top of the page entitled "Mario Pest Control" -->
+<!-- Donkey Kong's email address
+Donkey Kong's company website url
+Donkey Kong's physical address
+A large title at the top of the page entitled "Donkey Kong Pest Control" -->
