Travel Form update

--- a/travel-form/index.html
+++ b/travel-form/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="divOne">
         <form id="application">
-            <input class="personalInfo" type="text"/>
+            <input class="personalInfo" placeholder="First Name" type="text"/>
+            <input class="personalInfo" placeholder="Last Name" type="text"/>
+            <input class="personalInfo" placeholder="Age" type="number"/>
                     <!--first name 
                         last name
                         age     -->
