--- a/travel-form/index.html
+++ b/travel-form/index.html
@@ -12,8 +12,14 @@
         <form id="application">
             <input class="personalInfo" placeholder="First Name" type="text"/>
             <input class="personalInfo" placeholder="Last Name" type="text"/>
-            <input class="personalInfo" placeholder="Age" type="number"/>
-                    <!--first name 
+            <input class="personalInfo" id="age" placeholder="Age" type="number"/>
+            
+            <div>
+                <h5 id="genderHeader"><pre>M   F</pre></h5>
+                <input id="gender" type="radio"/>
+                <input id="gender" type="radio"/>
+            </div>
+                <!--first name 
                         last name
                         age     -->
 
