--- a/travel-form/index.html
+++ b/travel-form/index.html
@@ -17,8 +17,8 @@
             
             <div id="genderDiv">
                 <h5 id="genderHeader"><pre>M   F</pre></h5>
-                <input id="gender" type="radio"/>
-                <input id="gender" type="radio"/>
+                <input name="gender" type="radio" id="genderMale" value="Male" checked/>
+                <input name="gender" type="radio" id="genderFemale" value="Female"/>
             </div>
             <div id="infoDiv">
                 <input class="personalInfo" id="dateOfDeparture" type="date"/>
