business-time update..

--- a/business-time/index.html
+++ b/business-time/index.html
@@ -10,16 +10,27 @@
 <body id="bodId">
     <div id="siteWrapper">
         <div id="divHeader">
-            <h1>Hello World</h1>
+            <h1>Play Music Today</h1>
         </div>
         <div id="container">
             <div class="menu">
-                <a href="#">Guitar</a>
-                <a href="#">Harmonica</a>
-                <a href="#">Djembe</a>
-                <a href="#">Didgeridoo</a>
+                <div class="instrumentDiv">
+                    <h3>Guitars</h3>
+                    <img id="guitarImg" src="https://upload.wikimedia.org/wikipedia/commons/4/45/GuitareClassique5.png" alt="GuitareClassique5.png"/>                              
+                </div>
+                <div class="instrumentDiv">
+                    <h3>Harmonicas</h3>
+                    <img id="harmonicaImg" src="harmonica1.png"/>
+                </div>
+                <div class="instrumentDiv">
+                    <h3>Djembes</h3>
+                    <img id="djembeImg" src=""/>
+                </div>
+                <div class="instrumentDiv">
+                    <h3>Didgeridoos</h3>
+                    <img id="didgeImg" src=""/>
+                </div>
             </div>
-
             <div class="main">
                 <h2>Music is Everything!!!</h2>
                 <p>As Long As We Have Music We Have Magic!</p>
@@ -30,7 +41,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
             </div>
         </div>
-            <div id="footer">© copyright w3schools.com</div>
+            <div id="footer">© copyright MTB</div>
     </div>
 
 </body>
