Business time update

--- a/business-time/index.html
+++ b/business-time/index.html
@@ -15,20 +15,20 @@
         <div id="container">
             <div class="menu">
                 <div class="instrumentDiv">
-                    <h3>Guitars</h3>
-                    <img id="guitarImg" src="https://upload.wikimedia.org/wikipedia/commons/4/45/GuitareClassique5.png" alt="GuitareClassique5.png"/>                              
+                    <h5>Guitars</h5>
+                    <img class="instrumentImg" id="guitarImg" src="GuitareClassique.png"/>                              
                 </div>
                 <div class="instrumentDiv">
-                    <h3>Harmonicas</h3>
-                    <img id="harmonicaImg" src="harmonica1.png"/>
+                    <h5>Harmonicas</h5>
+                    <img class="instrumentImg" id="harmonicaImg" src="harmonica1.png"/>
                 </div>
                 <div class="instrumentDiv">
-                    <h3>Djembes</h3>
-                    <img id="djembeImg" src=""/>
+                    <h5>Djembes</h5>
+                    <img class="instrumentImg" id="djembeImg" src="djembe1.png"/>
                 </div>
                 <div class="instrumentDiv">
                     <h3>Didgeridoos</h3>
-                    <img id="didgeImg" src=""/>
+                    <img id="didgeImg" src="didgeridoo2.png"/>
                 </div>
             </div>
             <div class="main">
