--- a/business-time-2/index.html
+++ b/business-time-2/index.html
@@ -16,9 +16,46 @@
         </nav>
         <h1 class="firstHeader">New and Used Cars</h1>
         <h4 class="secondHeader">Find That Car that's Just Right For You!</h4>
-        <div class="carDivs">
-            <div>
-                
+        <div class="mainDiv">
+            <div class="carDiv">
+                <div id="cars">
+                    <a class="clickPic" href="#">
+                        <div class="picDescription">
+                            <p>Cars</p>                    
+                        </div>
+                        <img src="car-tab.png"/>
+                    </a>
+                </div>
+            </div>
+            <div class="carDiv">
+                <div id="trucks">
+                    <a class="clickPic" href="#">
+                        <div class="picDescription">
+                            <p>Trucks</p>
+                        </div>
+                        <img src="trucks-tab.png"/>
+                    </a>
+                </div>
+            </div>
+            <div class="carDiv">
+                <div id="vans">
+                    <a class="clickPic" href="#">
+                        <div class="picDescription">
+                            <p>Vans</p>
+                        </div>
+                        <img src="vans-tab.png"/>
+                    </a>
+                </div>
+            </div>
+            <div class="carDiv">
+                <div id="motorcyles">
+                    <a class="clickPic" href="#">
+                        <div class="picDescription">
+                            <p>Motorcycles</p>
+                        </div>
+                        <img  src="motorcycle-tab.png"/>
+                    </a>
+                </div>
             </div>
         </div>
         <footer class="footerClass">©2018</footer>
