--- a/business-time-2/index.html
+++ b/business-time-2/index.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Business Time. Take #2</title>
     <link href="styles.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Staatliches" rel="stylesheet"/>
 </head>
 <body>
     <div class="siteWrapper">
         <nav class="navBar">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Product</a>
             <a href="#">More</a>
         </nav>
         <h1 class="firstHeader">New and Used Cars</h1>
-        <h4 class="secondHeader">Find That Car that's Just Right For You!</h4>
+        <h4 class="secondHeader">You're Sure To Find That Vehicle That's Just Right For You!</h4>
         <div class="mainDiv">
             <div class="carDiv">
                 <div id="cars">
-                    <a class="clickPic" href="#">
+                    <a class="clickPic" href="cars.html">
                         <div class="picDescription">
                             <p>Cars</p>                    
                         </div>
@@ -29,7 +30,7 @@
             </div>
             <div class="carDiv">
                 <div id="trucks">
-                    <a class="clickPic" href="#">
+                    <a class="clickPic" href="trucks.html">
                         <div class="picDescription">
                             <p>Trucks</p>
                         </div>
@@ -39,7 +40,7 @@
             </div>
             <div class="carDiv">
                 <div id="vans">
-                    <a class="clickPic" href="#">
+                    <a class="clickPic" href="vans.html">
                         <div class="picDescription">
                             <p>Vans</p>
                         </div>
@@ -58,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <footer class="footerClass">©2018</footer>
+        <footer class="footerClass">MTB ©2018</footer>
     </div>    
 </body>
 </html>
