--- a/CSS-zen-garden/index.html
+++ b/CSS-zen-garden/index.html
@@ -6,14 +6,19 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>CSS Zen Garden</title>
 	<link href="styles.css" rel="stylesheet"/>
+	<link href="http://fonts.googleapis.com/css?family=Julius+Sans+One|Libre+Baskerville:400,400italic" rel="stylesheet"/>
 </head>
 <body id="css-zen-garden">
 	<div class="siteWrap">
 				<!-- ^^^TOP OF PAGE TITLE HEAD CONTENT^^^ -->
 		<div class="headContent">	
-			<header class="headContain">
-				<h1>CSS Zen Garden</h1>
-				<h2>The Beauty of CSS Design</h2>
+			<header class="headContain" role="banner">
+				<h1>
+					CSS Zen Garden
+				</h1>
+				<h2>
+					The Beauty of CSS Design
+				</h2>
 			</header>		
 		</div>
 						<!-- <<LEFT CONTENT <<<---  -->
