--- a/CSS-zen-garden/index.html
+++ b/CSS-zen-garden/index.html
@@ -13,12 +13,8 @@
 				<!-- ^^^TOP OF PAGE TITLE HEAD CONTENT^^^ -->
 		<div class="headContent">	
 			<header class="headContain" role="banner">
-				<h1>
-					CSS Zen Garden
-				</h1>
-				<h2>
-					The Beauty of CSS Design
-				</h2>
+				<h1>CSS Zen Garden</h1>
+				<h2>The Beauty of CSS Design</h2>
 			</header>		
 		</div>
 						<!-- <<LEFT CONTENT <<<---  -->
