--- a/CSS-zen-garden/index.html
+++ b/CSS-zen-garden/index.html
@@ -21,8 +21,6 @@
 		<div class="leftContent">
 			<p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
 			<p>Download the example HTML FILE and CSS FILE</p>
-		</div>
-		<div>
 			<h3>The Road to Enlightenment</h3>
 			<p>
 				Littering a dark and dreary road lay the past relics of browser-specific tags, incompatible 
@@ -35,7 +33,25 @@
 			</p>
 			<p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. 
 				Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
+
+				<div class="explanation" id="zen-explanation" role="article">
+					<h3>So What is This About?</h3>
+					<p>There is a continuing need to show the power of 
+						<abbr title="Cascading Style Sheets">CSS</abbr>. 
+						The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The 
+						<abbr title="HyperText Markup Language">HTML</abbr> 
+						remains the same, the only thing that has changed is the external 
+						<abbr title="Cascading Style Sheets">CSS</abbr> file. Yes, really.
+					</p>
+					<p>
+						<abbr title="Cascading Style Sheets">CSS</abbr> 
+						allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.
+					</p>
+				</div>
+
 		</div>			
+
+
 	<!-- ->>>>RIGHT CONTENT NEEDED TO BE REVIEWED	->>>	 -->
 		<div class="rightContent">
 			<aside class="rightAside"> 
