--- a/CSS-zen-garden/index.html
+++ b/CSS-zen-garden/index.html
@@ -33,8 +33,7 @@
 			</p>
 			<p>The CSS Zen Garden invites you to relax and meditate on the important lessons of the masters. Begin to see with clarity. 
 				Learn to use the time-honored techniques in new and invigorating fashion. Become one with the web.</p>
-
-				<div class="explanation" id="zen-explanation" role="article">
+<!-- SO WHAT IS THIS ABOUT -->
 					<h3>So What is This About?</h3>
 					<p>There is a continuing need to show the power of 
 						<abbr title="Cascading Style Sheets">CSS</abbr>. 
