--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -11,10 +11,10 @@
 <body>
   <div id="wrap">
     <header>
-      <div>
+      <div class="topContent"> 
+        <img id="topLogo" src="http://www.csszengarden.com/214/enso.svg"/>
         <h1>CSS Zen Garden</h1>
         <h2>The Beauty of CSS Design</h2>
-        <img src="http://www.csszengarden.com/214/enso.svg"/>
       </div>     
     </header>
     <div class="leftContent">
