Zen Gardening at the hub with Mark lkjearghiofuaerdjshfgoiuvsdhjetfsidulkjhfgpsedorflv

--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -15,7 +15,20 @@
         <img id="topLogo" src="http://www.csszengarden.com/214/enso.svg"/>
         <h1>CSS Zen Garden</h1>
         <h2>The Beauty of CSS Design</h2>
-      </div>     
+        <nav role="navigation">
+            <ul>
+              <li class="next">
+                <a href="http://www.csszengarden.com/214/page13"></a>
+              </li>
+              <li class="previous">
+                <a href="http://www.csszengarden.com/214/page11/"></a>
+              </li>
+              <li class="viewAll">
+                <a href="http://www.mezzoblue.com/zengarden/alldesigns/">VIEW ALL DESIGNS</a>
+              </li>
+            </ul>
+        </nav>  
+      </div>   
     </header>
     <div class="leftContent">
       <div class="left">
@@ -77,36 +90,42 @@
         </p>
       </div>
     </div>
-    <p></p>
-    <footer>
-    </footer>
+    <div class="preFoot">
+      <p id="footPar">
+          By Dave Shea. Bandwidth graciously donated by mediatemple. Now available: Zen Garden, the book.
+      </p>
+      <footer>
+
+      </footer>
+    </div>
+    
     <div class="rightContent">
-        <div class="rightTop">                             
-          <div class="right">SKYROOTS
-              by	Axel Hebenstreit</div>
-          <div class="right">CENTERFOLD
-              by	John Oxton</div>
-          <div class="right">60’S LIFESTYLE
-              by	Emiliano Pennisi</div>
-          <div class="right">MEDIOEVO
-              by	Emiliano Pennisi</div>
-          <div class="right">PLEASANT DAY
-              by	Kyle Jones</div>
-          <div class="right">SOME LEAFS
-              by	Michael Tupy</div>
-          <div class="right">BRUSHWOOD
-              by	Katrin Zieger</div>
-          <div class="right">RAGGED
-              by	Jose Florido</div>
-        </div>
-        <div class="rightBottom">
-          <div class="right">VIEW THIS DESIGN’S CSS</div>
-          <div class="right">CSS RESOURCES</div>
-          <div class="right">FAQ</div>
-          <div class="right">SUBMIT A DESIGN</div>
-          <div class="right">TRANSLATIONS</div>
-        </div>
+      <div class="rightTop">                             
+        <div class="right">SKYROOTS
+            by	Axel Hebenstreit</div>
+        <div class="right">CENTERFOLD
+            by	John Oxton</div>
+        <div class="right">60’S LIFESTYLE
+            by	Emiliano Pennisi</div>
+        <div class="right">MEDIOEVO
+            by	Emiliano Pennisi</div>
+        <div class="right">PLEASANT DAY
+            by	Kyle Jones</div>
+        <div class="right">SOME LEAFS
+            by	Michael Tupy</div>
+        <div class="right">BRUSHWOOD
+            by	Katrin Zieger</div>
+        <div class="right">RAGGED
+            by	Jose Florido</div>
       </div>
+      <div class="rightBottom">
+        <div class="right">VIEW THIS DESIGN’S CSS</div>
+        <div class="right">CSS RESOURCES</div>
+        <div class="right">FAQ</div>
+        <div class="right">SUBMIT A DESIGN</div>
+        <div class="right">TRANSLATIONS</div>
+      </div>
+    </div>
   </div> 
 </body>
 </html>
