Zen Garden update Left-content bamboo background

--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -33,7 +33,7 @@
     <div class="leftContent">
       <div class="left">
         <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
-        <p>Download the example <a>HTML FILE</a> and <a>CSS FILE</a></p>
+        <p>Download the example <a href="#">HTML FILE</a> and <a href="#">CSS FILE</a></p>
       </div>
       <div class="left">
         <h3>THE ROAD TO ENLIGHTENMENT</h3>
@@ -54,7 +54,7 @@
           Designers and coders alike have contributed to the beauty of the web; we can always push it further.
         </p>
       </div>
-      <div class="left">
+      <div class="left" id="leftBamboo">
         <h3>PARTICIPATION</h3>
         <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. 
           Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.
@@ -66,7 +66,7 @@
           <a>Send us a link</a> to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.
         </p>
       </div>
-      <div class="left">
+      <div class="left" id="leftBamboo">
         <h3>BENEFITS</h3>
         <p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. 
           This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.
