Zen-Garden *fixed Header positions using grid. *adjusted Nav bar

--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -15,25 +15,27 @@
         <img id="topLogo" src="http://www.csszengarden.com/214/enso.svg"/>
         <h1>CSS Zen Garden</h1>
         <h2>The Beauty of CSS Design</h2>
-        <nav role="navigation">
-            <ul>
-              <li class="next">
-                <a href="http://www.csszengarden.com/214/page13"></a>
-              </li>
-              <li class="previous">
-                <a href="http://www.csszengarden.com/214/page11/"></a>
-              </li>
-              <li class="viewAll">
-                <a href="http://www.mezzoblue.com/zengarden/alldesigns/">VIEW ALL DESIGNS</a>
-              </li>
-            </ul>
-        </nav>  
+        <div class="designBank">
+          <nav role="navigation">
+              <ul>
+                <li class="next">
+                  <a href="http://www.csszengarden.com/214/page13"></a>
+                </li>
+                <li class="previous">
+                  <a href="http://www.csszengarden.com/214/page11/"></a>
+                </li>
+                <li class="viewAll">
+                  <a href="http://www.mezzoblue.com/zengarden/alldesigns/">VIEW ALL DESIGNS</a>
+                </li>
+              </ul>
+          </nav>  
+      </div>
       </div>   
     </header>
     <div class="leftContent">
       <div class="left">
         <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
-        <p>Download the example <a href="#">HTML FILE</a> and <a href="#">CSS FILE</a></p>
+        <p id="exampleLinkP">Download the example <a href="#">HTML FILE</a> and <a href="#">CSS FILE</a></p>
       </div>
       <div class="left">
         <h3>THE ROAD TO ENLIGHTENMENT</h3>
