Zen garden Fixed <p> margins and worked on Nav Bar

--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -20,6 +20,7 @@
               <ul>
                 <li class="next">
                   <a href="http://www.csszengarden.com/214/page13"></a>
+                  <span class="nextButton">></span>
                 </li>
                 <li class="previous">
                   <a href="http://www.csszengarden.com/214/page11/"></a>
@@ -33,7 +34,7 @@
       </div>   
     </header>
     <div class="leftContent">
-      <div class="left">
+      <div class="left" id="leftIntro">
         <p>A demonstration of what can be accomplished through CSS-based design. Select any style sheet from the list to load it into this page.</p>
         <p id="exampleLinkP">Download the example <a href="#">HTML FILE</a> and <a href="#">CSS FILE</a></p>
       </div>
