--- a/CSS-Zen-Garden-2/index.html
+++ b/CSS-Zen-Garden-2/index.html
@@ -19,8 +19,7 @@
           <nav role="navigation">
               <ul>
                 <li class="next">
-                  <a href="http://www.csszengarden.com/214/page13"></a>
-                  <span class="nextButton">></span>
+                  <a href="http://www.csszengarden.com/214/page13"><span class="nextButton">></span></a>
                 </li>
                 <li class="previous">
                   <a href="http://www.csszengarden.com/214/page11/"></a>
